05-October-2022 Petasis Georgios <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/components/controls/button/annotation-button/annotation-button.component.ts:
 Added support for annotating images.

 * clarin-angular/src/app/components/controls/text-widget/text-widget.component.ts:
 Added support for image annotations!

 * clarin-angular/src/app/components/controls/annotation-visualizer/annotation-visualizer.component.ts:
 Add a flag to not trigger a selection change event periodically (though live
 syncing annotations).

 * clarin-angular/src/app/helpers/jointjsControls.ts: Added various helper
 controls, for adjusting selection on image annotation.

 * clarin-angular/src/app/pipes/annotation-spans.pipe.ts:
 * clarin-angular/src/app/models/span.ts: Modified Span, to include fields for
 image annotations.

29-September-2022 Petasis Georgios <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/components/controls/text-widget/text-widget.component.html:
 * clarin-angular/src/app/components/controls/text-widget/text-widget.component.ts:
 * clarin-angular/src/app/components/controls/uploader/uploader.component.ts:
 * clarin-angular/src/app/components/views/add-collection/add-collection.component.html:
 * clarin-angular/src/app/components/views/add-collection/add-collection.component.ts:
 * clarin-angular/src/app/services/document-service/document.service.ts:
 * clarin-angular/src/css/clarin-material.scss:
 * clarin-angular/src/proxy.conf.json:
 * clarin-angular/src/app/helpers/jointjsControls.ts: Added support for
 visualising images, and perform rectangular selections over images. Work in
 progress.

 * api-client/api.py:
 * backend-django/DjangoClarin/settings.py:
 * backend-django/clarin_backend/sql_views.py:
 * backend-django/requirements.txt: Updates to backend (to support data URLs
 and ensure that deleted images are removed from the filesystem).

28-September-2022 Petasis Georgios <petasis@iit.demokritos.gr>: