@@ -1,6 +1,6 @@
 {
   "name": "The Ellogon Annotation Platform",
-  "version": "3.0.2",
+  "version": "3.1.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
