@@ -1,4 +1,11 @@
 05-October-2022 Petasis Georgios <petasis@iit.demokritos.gr>:
+ * clarin-angular/package.json: Updated version to 3.1.0.
+
+ * clarin-angular/src/app/components/controls/text-widget/text-widget.component.ts:
+ * clarin-angular/src/app/components/views/add-collection/add-collection.component.ts:
+ * clarin-angular/src/app/services/document-service/document.service.ts:
+ Supported images are: JPEG, PNG, GIF, TIFF, WEBP.
+
  * clarin-angular/src/app/components/controls/button/annotation-button/annotation-button.component.ts:
  Added support for annotating images.
 
